[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Scripts/LaserEnemigo.gd" type="Script" id=1]

[sub_resource type="CapsuleMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 1, 0.0627451, 0.0627451, 1 )
metallic = 1.0
metallic_specular = 0.44
roughness = 0.81

[sub_resource type="CapsuleShape" id=3]

[node name="LaserEnemigo" type="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.43447, 0, 0, 0 )
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 5, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 5, 0, 0, 0 )
shape = SubResource( 3 )

[node name="DestroyTimer" type="Timer" parent="."]
autostart = true

[connection signal="area_entered" from="." to="." method="_on_LaserEnemigo_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_LaserEnemigo_body_entered"]
[connection signal="timeout" from="DestroyTimer" to="." method="_on_DestroyTimer_timeout"]
